[metadata]
name = niflow-nbclab-idconn
version = attr: niflow.nbclab.idconn.__version__
url = https://github.com/niflows/niflow-nbclab-idconn
author = Katie Bottenhorn
author_email = kbott006@fiu.edu
description = niflow-nbclab-idconn workflow package
license = Apache License, 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
# Place any Python dependencies here
install_requires = 
# Uncomment the following line if your package should distribute any non-Python files
# include_package_data = True

[options.entry_points]
console_scripts =
    niflow-nbclab-idconn = niflow.nbclab.idconn.cli:main

## If your workflow requires data to run, uncomment and update the following section:
# [options.package_data]
# niflow-nbclab-idconn =
#     niflow/nbclab/idconn/data/*
